--- a/doc/paper/paper.tex
+++ b/doc/paper/paper.tex
@@ -95,6 +95,7 @@
 \DeclareMathOperator{\Doms}{Doms}
 
 \sisetup{group-separator = {,}}
+\newtheorem{assumption}[theorem]{Assumption}
 
 \crefalias{enumi}{type}
 \crefname{type}{Type}{Types}
@@ -106,12 +107,8 @@
 \crefname{formula}{Formula}{Formulas}
 \creflabelformat{formula}{#2\textup{(#1)}#3}
 
-% TODO: the technical appendix should follow the same template (probably just
-% integrate it into the main paper)
-
 % TODO (for the entire paper):
 % * 15 pages excluding references
-% * draw a clear line between prior work and new developments
 
 \begin{document}
 
@@ -684,10 +681,11 @@ for the algorithm to terminate.\footnote{Note that characterising the
   algorithms is an emerging area of research. These questions have been
   partially addressed in previous
   work~\cite{DBLP:conf/kr/DilkasB23,tóth2024complexityweightedfirstordermodel}
-  and are orthogonal to the goals of this section.}
+  and are orthogonal to the goals of this section.} For the remainder of this
+section, let $\mathcal{E}$ denote the equations returned by
+\CompileWithBaseCases.
 
 \begin{theorem}[Termination]\label{thm:halting}
-  Let $\mathcal{E}$ represent the equations returned by \CompileWithBaseCases.
   Let $f$ be an $n$-ary function in $\mathcal{E}$ and
   $\mathbf{x} \in \mathbb{N}_{0}^{n}$. Then the evaluation of $f(\mathbf{x})$
   terminates.
@@ -695,8 +693,114 @@ for the algorithm to terminate.\footnote{Note that characterising the
 
 We prove \cref{thm:halting} using double induction. First, we apply induction to
 the number of functions in $\mathcal{E}$. Then, we use induction on the arity of
-the `last' function in $\mathcal{E}$ according to some topological ordering. For
-the detailed proof, please refer to the technical appendix.
+the `last' function in $\mathcal{E}$ according to some topological ordering. We
+begin with a few observations that stem from
+previous~\cite{DBLP:conf/kr/DilkasB23,DBLP:conf/ijcai/BroeckTMDR11} and this
+work. Let $\mathcal{E}$ represent the equations returned by
+\CompileWithBaseCases.
+
+\begin{observation}\label{assumption1}
+  For each function $f$, there is precisely one equation $e \in \mathcal{E}$
+  with $f(\mathbf{x})$ on the left-hand side where all $x_{i}$'s are variables
+  (i.e., $e$ is not a base case). We refer to $e$ as the \emph{definition} of
+  $f$.
+\end{observation}
+
+\begin{observation}\label{assumption2}
+  There is a \emph{topological ordering} of all functions ${(f_{i})}_{i}$ in
+  $\mathcal{E}$ such that equations in $\mathcal{E}$ with $f_{i}$ on the
+  left-hand side do not contain function calls to $f_{j}$ with $j > i$. This
+  condition prevents mutual recursion and other cyclic scenarios.
+\end{observation}
+
+\begin{observation}\label{assumption3}
+  For every equation $(f(\mathbf{x}) = \expr) \in \mathcal{E}$, the evaluation
+  of $\expr$ terminates when provided with the values of all relevant function
+  calls.
+\end{observation}
+
+\begin{corollary}\label{fact}
+  If $f$ is a non-recursive function with no function calls on the right-hand
+  side of its definition, then the evaluation of any function call
+  $f(\mathbf{x})$ terminates.
+\end{corollary}
+
+\begin{observation}\label{fact2}
+  For any equation $f(\mathbf{x}) = \expr{}$, if $\mathbf{x}$ contains only
+  constants, then $\expr{}$ cannot include any function calls to $f$.
+\end{observation}
+
+Additionally, we introduce an assumption about the structure of recursion.
+
+\begin{assumption}\label{assumption4}
+  For every equation $(f(\mathbf{x}) = \expr) \in \mathcal{E}$, every recursive
+  function call $f(\mathbf{y}) \in \expr$ satisfies the
+  following:
+  \begin{itemize}
+    \item Each $y_{i}$ is either $x_{i} - c_{i}$ or $c_{i}$ for some constant
+          $c_{i}$.
+    \item There exists $i$ such that $y_{i} = x_{i} - c_{i}$ for some
+          $c_{i} > 0$.
+  \end{itemize}
+\end{assumption}
+
+Finally, we assume a particular order of evaluation for function calls using the
+equations in $\mathcal{E}$. Specifically, we assume that base cases are
+considered before the recursive definition. The exact order in which base cases
+are considered is immaterial.
+
+\begin{assumption}
+  When multiple equations in $\mathcal{E}$ match a function call
+  $f(\mathbf{x})$, preference is given to an equation with the most constants on
+  its left-hand side.
+\end{assumption}
+
+With the observations and assumptions mentioned above, we are ready to prove
+\cref{thm:halting}. For readability, we divide the proof into several lemmas of
+increasing generality.
+
+\begin{lemma}\label{lemma:oneunary}
+  Assume that $\mathcal{E}$ consists of just \emph{one unary} function $f$. Then
+  the evaluation of a function call $f(x)$ terminates for any
+  $x \in \mathbb{N}_{0}$.
+\end{lemma}
+\begin{proof}
+  If $f(x)$ is captured by a base case, then its evaluation terminates by
+  \cref{fact,fact2}. If $f$ is not recursive, the evaluation of
+  $f(x)$ terminates by \cref{fact}.
+
+  Otherwise, let $f(y)$ be an arbitrary function call on the right-hand side of
+  the definition of $f(x)$. If $y$ is a constant, then there is a base case for
+  $f(y)$. Otherwise, let $y = x - c$ for some $c > 0$. Then there exists
+  $k \in \mathbb{N}_{0}$ such that $0 \le x - kc \le c-1$. So, after $k$
+  iterations, the sequence of function calls $f(x), f(x-c), f(x-2c),\dots$ will
+  be captured by the base case $f(x \mod c)$.
+\end{proof}
+
+\begin{lemma}\label{lemma:onefunction}
+  Generalising \cref{lemma:oneunary}, let $\mathcal{E}$ be a set of equations
+  for \emph{one} $n$-ary function $f$ for some $n \ge 1$. Then the evaluation of
+  $f(\mathbf{x})$ terminates for any $\mathbf{x} \in \mathbb{N}_{0}^{n}$.
+\end{lemma}
+\begin{proof}
+  If $f$ is non-recursive, the evaluation of $f(\mathbf{x})$ terminates by
+  previous arguments. We proceed by induction on $n$, with the base case of
+  $n=1$ handled by \cref{lemma:oneunary}. Assume that $n > 1$. Any base case of
+  $f$ can be seen as a function of arity $n-1$, since one of the parameters is
+  fixed. Thus, the evaluation of any base case terminates by the inductive
+  hypothesis. It remains to show that the evaluation of the recursive equation
+  for $f$ terminates, but that follows from \cref{assumption3}.
+\end{proof}
+
+\begin{proof}[Proof of \cref{thm:halting}]
+  We proceed by induction on the number of functions $n$. The base case of $n=1$
+  is handled by \cref{lemma:onefunction}. Let ${(f_{i})}_{i=1}^{n}$ be some
+  topological ordering of these $n > 1$ functions. If $f = f_{j}$ for $j < n$,
+  then the evaluation of $f(\mathbf{x})$ terminates by the inductive hypothesis
+  since $f_{j}$ cannot call $f_{n}$ by \cref{assumption2}. Using the inductive
+  hypothesis that all function calls to $f_{j}$ (with $j < n$) terminate, the
+  proof proceeds similarly to the Proof of \cref{lemma:onefunction}.
+\end{proof}
 
 \subsection{Propagating Domain Size Assumptions}\label{sec:propagating}
 
