--- a/doc/paper/paper.tex
+++ b/doc/paper/paper.tex
@@ -83,11 +83,16 @@
 \newcommand{\Cranebfs}{\textsc{Gantry-BFS}}
 \newcommand{\Cranegreedy}{\textsc{Gantry-Greedy}}
 
+\SetKwProg{Fn}{Function}{:}{}
+\SetKwData{Cache}{Cache}
+
 \SetKwFunction{CompileWithBaseCases}{CompileWithBaseCases}
 \SetKwFunction{Compile}{{\normalfont \textsc{Crane}}}
 \SetKwFunction{Propagate}{Propagate}
 \SetKwFunction{FindBaseCases}{FindBaseCases}
 \SetKwFunction{Simplify}{Simplify}
+\SetKwFunction{Main}{Main}
+\SetKwFunction{Input}{ParseCommandLineArguments}
 
 \DeclareMathOperator{\CR}{CR}
 \DeclareMathOperator{\DR}{DR}
@@ -509,8 +514,6 @@ $f(\mathbf{x}) = \expr{}$, where $f(\mathbf{x})$ is a signature.
 % contribution.
 
 % TODO: Section 3: you seem to use "equation" and "function" interchangeably
-
-% TODO: this section "would benefit from cleaner reasoning"
 
 % TODO: this section should be expanded by 1 page ("a clear discussion of the
 % innovation aspect and technical parts")
@@ -957,6 +960,31 @@ goal: constructing a tautological clause that retains the literals in $C'$.
 \subsection{Generating C++ Code}\label{sec:cpp}
 % TODO (must): expand this section
 % TODO: The purpose of C++ code generation is to turn mathematical equations into executable code.
+
+% TODO: integrate into the text below
+\begin{algorithm}[t]
+  \caption{TODO: A sketch of the C++ program from...}
+  initialise $\Cache_{g(0, m)}$, $\Cache_{g(l, 0)}$, $\Cache_{g}$, and $\Cache_{f}$\;
+  \DontPrintSemicolon
+  \textbf{Function} $g_{0,m}(m)$\textbf{:} \dots\;
+  \textbf{Function} $g_{l,0}(l)$\textbf{:} \dots\;
+  \PrintSemicolon
+  \Fn{$g(l, m)$}{
+    \lIf{$(l, m) \in \Cache_{g}$}{\Return{$\Cache_{g}(l, m)$}}
+    \lIf{$l = 0$}{\Return{$g_{0,m}(m)$}}
+    \lIf{$m = 0$}{\Return{$g_{l,0}(l)$}}
+    $r \gets g(l-1, m) + mg(l-1,m-1)$\;
+    $\Cache_{g}(l, m) \gets r$\;
+    \Return{$r$}\;
+  }
+  \DontPrintSemicolon
+  \textbf{Function} $f(m, n)$\textbf{:} \dots\;
+  \PrintSemicolon
+  \Fn{\Main}{
+    $(m, n) \gets \Input{}$\;
+    \Return{$f(m, n)$}\;
+  }
+\end{algorithm}
 
 In this section, we will describe the final step of \Cranetwo{} as outlined in
 \cref{fig:overview}. This step involves translating the set of equations
